feat: Alpaca Markets real-time data integration
Alpaca provides genuine real-time IEX feed data free with a paper trading
account — the best free real-time source available.

AlpacaClient:
- GET /v2/stocks/{symbol}/snapshot — single symbol real-time quote
- GET /v2/stocks/snapshots?symbols=A,B,C — batch up to 100 symbols
  in ONE API call (vs N calls for other providers)
- Headers: APCA-API-KEY-ID + APCA-API-SECRET-KEY
- Feed: iex (free tier, real-time during market hours)

MarketDataClient priority chain:
  1. Alpaca  (real-time, batch-efficient, free with paper account)
  2. Finnhub (15-min delayed, 60/min free)
  3. Alpha Vantage (15-min delayed, 25/day + mock fallback)

MarketDataController: all multi-symbol endpoints use getBatchQuotes()
so the Mag7 tab fetches 7 symbols in a single Alpaca API call.

Setup:
  ALPACA_API_KEY=pk_xxx ALPACA_API_SECRET=xxx docker compose up --build